Fix Playwright test suite configuration and selectors
Updated test suite from 0% to 67% pass rate by fixing:
- Changed baseURL from non-existent GitHub Pages to localhost
- Added webServer config for local HTTP server
- Updated all test selectors to match HTML labels with asterisks
- Fixed ambiguous selectors using ID locators
- Added dialog handlers for confirmation alerts
- Added http-server dependency

Test files updated:
- accessibility.spec.ts (9/9 passing)
- bank-details.spec.ts (5/5 passing)
- business-details.spec.ts (5/5 passing)
- client-details.spec.ts (6/6 passing)
- invoice-details.spec.ts (6/6 passing)
- integration.spec.ts (2/3 passing)
- invoice-generation.spec.ts (4/5 passing)
- helpers/page-objects.ts (core selectors fixed)

Includes documentation of remaining test issues and fixes applied.

--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "trace": "playwright show-trace",
     "codegen": "playwright codegen https://warwick-allen.github.io/invoice-generator/"
   },
-  "keywords": ["playwright", "testing", "e2e", "invoice", "nz"],
+  "keywords": [
+    "playwright",
+    "testing",
+    "e2e",
+    "invoice",
+    "nz"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.41.0",
-    "@types/node": "^20.11.0"
+    "@types/node": "^20.11.0",
+    "http-server": "^14.1.1"
   }
 }
